modified:   index.html 	modified:   style.css

--- a/index.html
+++ b/index.html
@@ -11,6 +11,11 @@
         <header>
             <img src="spider.png" alt="logo" height="70px" width="auto">
 
+            <a href="" class="links">New</a>
+            <a href="" class="links">Upload</a>
+            <a href="" class="links">Share</a>
+            <input type="text" placeholder="Search">
+
 
         </header>
         
