modified:   index.html 	modified:   style.css Almost done with the header section

--- a/index.html
+++ b/index.html
@@ -9,8 +9,21 @@
 <body>
     <div id="container">
         <header>
+            <input type="text">
 
+            <div id="user-info">
+                <img src="spider.png" alt="Profile picture">
+                <div>
+                    <p>Hi there!</p>
+                    <h4>Spider Light (@Spidy12)</h4>
+                </div>
+            </div>
 
+            <div id="buttons">
+                <button>New</button>
+                <button>Upload</button>
+                <button>Share</button>
+            </div>
         </header>
 
         <sidebar>
