modified:   index.html 	modified:   style.css

--- a/index.html
+++ b/index.html
@@ -53,12 +53,39 @@
             <div id="projects">
             
 
-                <div class="cards">Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate impedit incidunt quidem officia corporis perferendis quo animi, numquam aperiam corrupti sint quae labore obcaecati dolorum. Asperiores quibusdam quaerat eius modi.</div>
-                <div class="cards">Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus cumque exercitationem labore soluta voluptates dolorem officiis inventore placeat quasi similique debitis porro perspiciatis beatae consectetur aperiam non voluptatibus, fuga voluptas.</div>
-                <div class="cards">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Cum in, animi quas dignissimos vel, ratione laborum incidunt obcaecati dolores blanditiis nihil quos, enim tempora beatae quidem hic exercitationem eos voluptas.</div>
-                <div class="cards">Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus quae soluta numquam odio, vel nulla provident. Quasi minima culpa, qui harum expedita eaque, fugiat eveniet reiciendis, praesentium ipsum odio amet.</div>
-                <div class="cards">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illum at maxime tenetur consequatur ipsum, mollitia velit similique possimus voluptatibus. Nihil impedit doloremque sit maiores sed natus. Neque temporibus eveniet exercitationem!</div>
-                <div class="cards">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad numquam facilis obcaecati et ab vel laboriosam dolores alias nemo, labore cupiditate praesentium deserunt eveniet possimus? Magnam iure iusto inventore exercitationem?</div>
+                <div class="cards">
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate impedit incidunt quidem officia corporis perferendis quo animi, numquam aperiam corrupti sint quae labore obcaecati dolorum. Asperiores quibusdam quaerat eius modi.</p>
+                </div>
+
+                <div class="cards">
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                        Cupiditate impedit incidunt quidem officia corporis perferendis quo animi, 
+                        numquam aperiam corrupti sint quae labore obcaecati dolorum. Asperiores quibusdam quaerat eius modi.</p>
+                </div>
+
+                <div class="cards">
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                        Cupiditate impedit incidunt quidem officia corporis perferendis quo animi, 
+                        numquam aperiam corrupti sint quae labore obcaecati dolorum. Asperiores quibusdam quaerat eius modi.</p>
+                </div>
+
+                <div class="cards">
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                        Cupiditate impedit incidunt quidem officia corporis perferendis quo animi, 
+                        numquam aperiam corrupti sint quae labore obcaecati dolorum. Asperiores quibusdam quaerat eius modi.</p>
+                </div>
+
+                <div class="cards">
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                        Cupiditate impedit incidunt quidem officia corporis perferendis quo animi,
+                         numquam aperiam corrupti sint quae labore obcaecati dolorum. Asperiores quibusdam quaerat eius modi.</p>
+                </div>
+
+                <div class="cards">
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                    Cupiditate impedit incidunt quidem officia corporis perferendis quo animi,
+                     numquam aperiam corrupti sint quae labore obcaecati dolorum. Asperiores quibusdam quaerat eius modi.</p>
+                </div>
 
 
             </div>
