new file:   icons/magnify.png 	modified:   index.html 	modified:   style.css Added all the icons to thier appropriate place!

--- a/index.html
+++ b/index.html
@@ -9,10 +9,13 @@
 <body>
     <div id="container">
         <header>
-            <input type="text">
+            <div id="search">
+                <img src="icons/magnify.png" alt="">
+                <input type="text">
+            </div>
 
             <div id="user-info">
-                <img src="spider.png" alt="Profile picture">
+                <img src="spider.png" alt="Profile picture" id="profile-image">
                 <div>
                     <p>Hi there!</p>
                     <h4>Spider Light (@Spidy12)</h4>
@@ -27,23 +30,23 @@
         </header>
 
         <sidebar>
-            <h2>Dashboard</h2>
+            <h2> <img src="icons/view-dashboard.png" alt="" id="dashboard"> &nbsp; Dashboard</h2>
             <br><br>
             <ul>
-                <li>Home</li>
-                <li>profile</li>
-                <li>Messages</li>
-                <li>History</li>
-                <li>Tasks</li>
-                <li>Communities</li>
+                <li> <img src="icons/home-circle.png" alt=""> &nbsp; Home</li>
+                <li> <img src="icons/account.png" alt=""> &nbsp; profile</li>
+                <li> <img src="icons/message.png" alt=""> &nbsp; Messages</li>
+                <li> <img src="icons/history.png" alt=""> &nbsp; History</li>
+                <li> <img src="icons/content-copy.png" alt=""> &nbsp; Tasks</li>
+                <li> <img src="icons/account-group.png" alt=""> &nbsp; Communities</li>
                 
             </ul>
             <br><br><br><br>
 
             <ul>
-                <li>Setting</li>
-                <li>Support</li>
-                <li>Privacy</li>
+                <li> <img src="icons/cog.png" alt=""> &nbsp; Setting</li>
+                <li> <img src="icons/help.png" alt=""> &nbsp; Support</li>
+                <li> <img src="icons/shield.png" alt=""> &nbsp; Privacy</li>
             </ul>
 
         </sidebar>
@@ -111,26 +114,26 @@
                 <h5>Trending</h5>
 
                 <div>
-                    <img src="spider.png" alt="">
+                    <img src="spider.png" alt="" id="profile-image">
                     <p>@username</p>
                     <p>Bio</p>
                 </div>
 
 
                 <div>
-                    <img src="spider.png" alt="">
+                    <img src="spider.png" alt="" id="profile-image">
                     <p>@username</p>
                     <p>Bio</p>
                 </div>
 
                 <div>
-                    <img src="spider.png" alt="">
+                    <img src="spider.png" alt="" id="profile-image">
                     <p>@username</p>
                     <p>Bio </p>
                 </div>
 
                 <div>
-                    <img src="spider.png" alt="">
+                    <img src="spider.png" alt="" id="profile-image">
                     <p>@username</p><br>
                     <p>Bio</p>
                 </div>
