--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
             </div>
 
             <div id="announsments">
-                <h5>Announsments</h5><br>
+                <h5 style="font-size: 16px; text-align: left;">Announsments</h5><br>
 
                 <p>
                     Lorem ipsum dolor sit amet consectetur, 
@@ -111,7 +111,7 @@
 
 
             <div id="trending">
-                <h5>Trending</h5>
+                <h5 style="font-size: 13px; text-align: left;">Trending</h5>
 
                 <div>
                     <img src="spider.png" alt="" id="profile-image">
